# pyapp

./: .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
app/api/: enums.py  main.py
app/api/routes/v1/: __init__.py  google_sso.py  group.py  order.py  product.py  store.py  user.py
app/core/: config.py  deps.py  security.py  tasks.py
app/crud/: user.py
app/db/: session.py
app/logging/: logger.py
app/models/: __init__.py  order.py  product.py  store.py  user.py
app/repository/: __init__.py  base.py  order.py  user.py
migrations/: env.py
